add new endpoint latest headlines
