# routes/v2.php
@@ -1,7 +1,7 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\API\V2\{V2DistributionController, v2NewsController, v2HomeController, V2LatestDistributionController, V2LatestPackageController, V2RankingController,V2ParamsController, V2SearchController, V2WeeklyNewsController};
+use App\Http\Controllers\API\V2\{V2DistributionController, v2NewsController, v2HomeController, V2LatestDistributionController, V2LatestHeadlineController, V2LatestPackageController, V2RankingController,V2ParamsController, V2SearchController, V2WeeklyNewsController};
 
 Route::prefix('v2')->name('v2.')->group(function () {
     Route::get('/', v2HomeController::class)->name('home');
@@ -15,8 +15,12 @@ Route::prefix('v2')->name('v2.')->group(function () {
     Route::apiResource('/weekly', V2WeeklyNewsController::class)->only('index', 'show');
 
     Route::get('/search', [V2SearchController::class, 'show'])->name('search.index');
-    Route::get('/latest/distributions', V2LatestDistributionController::class)->name('latest.distributions');
-    Route::get('/latest/packages', V2LatestPackageController::class)->name('latest.packages');
+
+    Route::prefix('latest')->group(function () {
+        Route::get('/distributions', V2LatestDistributionController::class)->name('latest.distributions');
+        Route::get('/packages', V2LatestPackageController::class)->name('latest.packages');
+        Route::get('/headlines', V2LatestHeadlineController::class)->name('latest.headlines');
+    });
 
     Route::prefix('params')->group(function () {
         Route::get('/rankings', [V2ParamsController::class, 'rankings'])->name('params.rankings');
